--- a/task2.css
+++ b/task2.css
@@ -14,3 +14,18 @@ font-family: 'Poppins', sans-serif;
 font-weight: 1600;
 font-size: 24px;
 }
+button {
+  background: #2497BF;
+box-shadow: 20px 20px 60px #C3DDD0;
+border: none;
+padding: 15px 32px;
+border-radius: 40px;
+display: inline-block;
+cursor: pointer;
+transition-duration: 0.4s;
+}
+button:hover{
+  color: #ffffff;
+  background-color: #2497BF;
+  padding: 15px 32px;
+}
